2011-07-07 Roman
- !!:SYS: ResString is replaced for resource alloc mechanism from RW-lock to mutex for some performance increase
    and memory consumption decrease.


2011-07-05 Roman
- !!!!:UI.Vision: Export to CSV is added to primitives: "Diagram" and "Document".
- SYS.XMLNode: Recursive request all text for node is added to function text().
    Case sensitivity selection is added to attribute's value request function.


2011-07-04 Roman
- SYS.Archive: Some prophylactic code clean.
- UI.Vision: Display number information is added.


2011-07-02 Roman
- FIX:UI.VCAEngine: Link status is fixed for "val:Value var" form.
- FIX:UI.Vision: Group link set error, after presentative attribute rename, is fixed.


2011-06-30 Roman
- DAQ.ModBus: User API function TController::messIO() is added for allow custom ModBus associated requests from the controller
    logical parameter's templates.
- DAQ: User API function TController::alarmSet() is added for unified alarm set to DAQ-object.
- FIX:DAQ.JavaLikeCalc: Wrong warning for not used template first try compile on change properties configuration and text programm is fixed.
    Function object's name generation for template's functions is set to nodePath(), for prevent coincidence of equal templates
    from different template libraries.


2011-06-29 Roman
- !!!!:SYS: OpenSCADA thread's object is made hard linked to thread. Task create and destroy detect method is made to task wrapper.
    No more need self starting detect method for each task.
    A thread load and call statistic is added to task manager.
    The function TSYS::time2str is some improved for times less for seconds.
- FIX:Transport.SSL, Transport.Sockets: Child task naming and processing is some fixed.
- DAQ: Copy source parameter type is added on copy.
- DAQ.ModBus: Logical type of parameters copy support is added. Default try for serial devices is set to 1.


2011-06-24 Roman
- DAQ.*: Call now status is added to all DAQ-modules.