@@ -57,7 +57,7 @@ void sfErr( const string &mess, YYLTYPE *ps);
 %token	<reg>	VAR CONST
 %token	<op>	O_PRP_F
 %type	<reg>	var expr
-%type	<prg_cd>	if if_expr end cycl
+%type	<prg_cd>	if if_expr OR_expr AND_expr end cycl
 %type	<fp_cnt>	prmlst
 
 %right	'=' ADDEQ SUBEQ MULEQ DIVEQ
@@ -252,8 +252,10 @@ expr:	CONST	{ $$ = $1; }
 	| expr '&' expr { try{ $$ = p_fnc->cdBinaryOp(Reg::BitAnd,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
 	| expr '^' expr { try{ $$ = p_fnc->cdBinaryOp(Reg::BitXor,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
 	| '(' expr ')'	{ $$ = $2; }
-	| expr OR expr	{ try{ $$ = p_fnc->cdBinaryOp(Reg::LOr,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
-	| expr AND expr	{ try{ $$ = p_fnc->cdBinaryOp(Reg::LAnd,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
+	| expr OR CONST	{ try{ $$ = p_fnc->cdBinaryOp(Reg::LOr,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
+	| expr OR_expr expr end		{ try{ $$ = p_fnc->cdCondBinaryOp($2,$1,$3,$4); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
+	| expr AND CONST{ try{ $$ = p_fnc->cdBinaryOp(Reg::LAnd,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
+	| expr AND_expr expr end	{ try{ $$ = p_fnc->cdCondBinaryOp($2,$1,$3,$4); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
 	| expr BITSHLEFT expr		{ try{ $$ = p_fnc->cdBinaryOp(Reg::BitShLeft,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
 	| expr BITSHRIGHT expr		{ try{ $$ = p_fnc->cdBinaryOp(Reg::BitShRight,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
 	| expr '<' expr { try{ $$ = p_fnc->cdBinaryOp(Reg::LT,$1,$3); } catch(TError err){ sfErr(err.mess,&@1); YYABORT; } }
@@ -276,6 +278,8 @@ prmlst: /*empty*/		{ $$ = 0; }
 	| prmlst ',' prmlst	{ $$ = $1 + $3; }
 if:	/*empty*/	{ $$ = p_fnc->prg.size(); p_fnc->prg=p_fnc->prg+(char)Reg::If+"RR00nn"; }
 if_expr: '?'		{ $$ = p_fnc->prg.size(); p_fnc->prg=p_fnc->prg+(char)Reg::If+"RR00nn"; }
+OR_expr: OR		{ $$ = p_fnc->prg.size(); p_fnc->prg=p_fnc->prg+(char)Reg::LCOr+"RRrrRRnn"; }
+AND_expr: AND		{ $$ = p_fnc->prg.size(); p_fnc->prg=p_fnc->prg+(char)Reg::LCAnd+"RRrrRRnn"; }
 cycl:	/*empty*/	{ $$ = p_fnc->prg.size(); p_fnc->prg=p_fnc->prg+(char)Reg::Cycle+"RRbbaann"; }
 end:	/*empty*/	{ p_fnc->prg+=(char)Reg::End; $$ = p_fnc->prg.size(); }
 /************************* END OF GRAMMAR ****************************/
